--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "@omni-hub/source",
+  "name": "@luizbim/omni-hub",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
   "private": true,
   "devDependencies": {
-    "@nx/eslint": "19.0.3",
-    "@nx/eslint-plugin": "19.0.3",
-    "@nx/jest": "19.0.3",
-    "@nx/js": "19.0.3",
-    "@nx/plugin": "^19.0.3",
-    "@nx/workspace": "19.0.3",
-    "@swc-node/register": "~1.8.0",
-    "@swc/cli": "~0.3.12",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
-    "@swc/jest": "0.2.20",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
+    "@nx/eslint": "19.5.3",
+    "@nx/eslint-plugin": "19.5.3",
+    "@nx/jest": "19.5.3",
+    "@nx/js": "19.5.3",
+    "@nx/plugin": "19.5.3",
+    "@nx/workspace": "19.5.3",
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "~0.4.0",
+    "@swc/core": "1.7.3",
+    "@swc/helpers": "0.5.12",
+    "@swc/jest": "0.2.36",
+    "@types/jest": "^29.5.12",
+    "@types/node": "22.0.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "nx": "19.0.3",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.4.2",
-    "verdaccio": "^5.0.4"
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "nx": "19.5.3",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.3",
+    "ts-node": "10.9.2",
+    "typescript": "5.5.4",
+    "verdaccio": "^5.32.0"
   },
   "dependencies": {
-    "@nx/devkit": "19.0.3",
-    "tslib": "^2.3.0"
+    "@nx/devkit": "19.5.3",
+    "tslib": "^2.6.3"
   },
   "nx": {
     "includedScripts": []
