--- a/package.json
+++ b/package.json
@@ -5,26 +5,29 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
-    "@nx/eslint": "19.5.3",
-    "@nx/eslint-plugin": "19.5.3",
-    "@nx/jest": "19.5.3",
-    "@nx/js": "19.5.3",
-    "@nx/plugin": "19.5.3",
-    "@nx/workspace": "19.5.3",
+    "@nx-extend/terraform": "^7.0.1",
+    "@nx/eslint": "19.6.2",
+    "@nx/eslint-plugin": "19.6.2",
+    "@nx/jest": "19.6.2",
+    "@nx/js": "19.6.2",
+    "@nx/node": "19.6.2",
+    "@nx/plugin": "19.6.2",
+    "@nx/workspace": "19.6.2",
     "@swc-node/register": "1.10.9",
     "@swc/cli": "~0.4.0",
     "@swc/core": "1.7.3",
     "@swc/helpers": "0.5.12",
     "@swc/jest": "0.2.36",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "29.5.12",
     "@types/node": "22.0.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "nx": "19.5.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-node": "^29.4.1",
+    "nx": "19.6.2",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.3",
     "ts-node": "10.9.2",
@@ -32,7 +35,7 @@
     "verdaccio": "^5.32.0"
   },
   "dependencies": {
-    "@nx/devkit": "19.5.3",
+    "@nx/devkit": "19.6.2",
     "tslib": "^2.6.3"
   },
   "nx": {
