--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "eslint.validate": ["json"]
+  "eslint.validate": ["json"],
+  "conventionalCommits.scopes": ["@omni-hub", "@omni-hub/utilities"]
 }
